istio/enforce-sidecar-injection-namespace/.chainsaw-test/ns-bad-nolabel.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bad-istio-sinj03
