istio/enforce-sidecar-injection-namespace/.chainsaw-test/ns-good.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: good-istio-sinj01
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    foo: disabled
    istio-injection: enabled
    bar: enabled
  name: good-istio-sinj02
